// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/List List with icons 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: 650px;
}

.emotion-2 {
  overflow-x: hidden;
}

.emotion-3 {
  position: absolute;
  left: 0;
  top: 0;
  height: 56px;
  width: 100%;
}

.emotion-4 {
  height: 3.5rem;
  font-size: 1rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 1rem 0px 1rem;
  cursor: pointer;
  font-weight: 500;
}

.emotion-4:hover {
  background-color: #f6f7ff;
}

.emotion-5 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5>div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  cursor: inherit;
}

.emotion-7 {
  position: absolute;
  left: 0;
  top: 56px;
  height: 56px;
  width: 100%;
}

.emotion-8 {
  height: 3.5rem;
  font-size: 1rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 1rem 0px 1rem;
  cursor: pointer;
}

.emotion-8:hover {
  background-color: #f6f7ff;
}

.emotion-11 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  fill: #757bb2;
  width: 1rem;
  height: 1rem;
}

.emotion-12 path {
  fill: #757bb2;
}

.emotion-13 {
  position: absolute;
  left: 0;
  top: 112px;
  height: 56px;
  width: 100%;
}

.emotion-19 {
  position: absolute;
  left: 0;
  top: 168px;
  height: 56px;
  width: 100%;
}

.emotion-25 {
  position: absolute;
  left: 0;
  top: 224px;
  height: 56px;
  width: 100%;
}

.emotion-31 {
  position: absolute;
  left: 0;
  top: 280px;
  height: 56px;
  width: 100%;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
        onScroll={[Function]}
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "direction": "ltr",
            "height": 277,
            "overflow": "auto",
            "position": "relative",
            "width": 650,
            "willChange": "transform",
          }
        }
      >
        <div
          style={
            Object {
              "height": 336,
              "pointerEvents": undefined,
              "width": "100%",
            }
          }
        >
          <span
            className="emotion-3"
          >
            <div
              className="emotion-4"
              data-testid="undefineddefault"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  All
                </div>
              </div>
            </div>
          </span>
          <span
            className="emotion-7"
          >
            <div
              className="emotion-8"
              data-testid="undefinedfalse"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  Option 1
                </div>
                <span
                  className="emotion-11"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-12"
                  />
                </span>
              </div>
            </div>
          </span>
          <span
            className="emotion-13"
          >
            <div
              className="emotion-8"
              data-testid="undefinedfalse"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  Option 2
                </div>
                <span
                  className="emotion-11"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-12"
                  />
                </span>
              </div>
            </div>
          </span>
          <span
            className="emotion-19"
          >
            <div
              className="emotion-8"
              data-testid="undefinedfalse"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  Option 3
                </div>
                <span
                  className="emotion-11"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-12"
                  />
                </span>
              </div>
            </div>
          </span>
          <span
            className="emotion-25"
          >
            <div
              className="emotion-8"
              data-testid="undefinedfalse"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  Option 4
                </div>
                <span
                  className="emotion-11"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-12"
                  />
                </span>
              </div>
            </div>
          </span>
          <span
            className="emotion-31"
          >
            <div
              className="emotion-8"
              data-testid="undefinedfalse"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  Option 5
                </div>
                <span
                  className="emotion-11"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-12"
                  />
                </span>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/List Virtualized List 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: 650px;
}

.emotion-2 {
  overflow-x: hidden;
}

.emotion-3 {
  position: absolute;
  left: 0;
  top: 0;
  height: 56px;
  width: 100%;
}

.emotion-4 {
  height: 3.5rem;
  font-size: 1rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 1rem 0px 1rem;
  cursor: pointer;
  font-weight: 500;
}

.emotion-4:hover {
  background-color: #f6f7ff;
}

.emotion-5 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5>div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  cursor: inherit;
}

.emotion-7 {
  position: absolute;
  left: 0;
  top: 56px;
  height: 56px;
  width: 100%;
}

.emotion-8 {
  height: 3.5rem;
  font-size: 1rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 1rem 0px 1rem;
  cursor: pointer;
}

.emotion-8:hover {
  background-color: #f6f7ff;
}

.emotion-11 {
  position: absolute;
  left: 0;
  top: 112px;
  height: 56px;
  width: 100%;
}

.emotion-15 {
  position: absolute;
  left: 0;
  top: 168px;
  height: 56px;
  width: 100%;
}

.emotion-19 {
  position: absolute;
  left: 0;
  top: 224px;
  height: 56px;
  width: 100%;
}

.emotion-23 {
  position: absolute;
  left: 0;
  top: 280px;
  height: 56px;
  width: 100%;
}

.emotion-27 {
  position: absolute;
  left: 0;
  top: 336px;
  height: 56px;
  width: 100%;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
        onScroll={[Function]}
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "direction": "ltr",
            "height": 277,
            "overflow": "auto",
            "position": "relative",
            "width": 650,
            "willChange": "transform",
          }
        }
      >
        <div
          style={
            Object {
              "height": 325092,
              "pointerEvents": undefined,
              "width": "100%",
            }
          }
        >
          <span
            className="emotion-3"
          >
            <div
              className="emotion-4"
              data-testid="undefineddefault"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  All
                </div>
              </div>
            </div>
          </span>
          <span
            className="emotion-7"
          >
            <div
              className="emotion-8"
              data-testid="undefinedfalse"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  Item 0
                </div>
              </div>
            </div>
          </span>
          <span
            className="emotion-11"
          >
            <div
              className="emotion-8"
              data-testid="undefinedfalse"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  Item 1
                </div>
              </div>
            </div>
          </span>
          <span
            className="emotion-15"
          >
            <div
              className="emotion-8"
              data-testid="undefinedfalse"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  Item 2
                </div>
              </div>
            </div>
          </span>
          <span
            className="emotion-19"
          >
            <div
              className="emotion-8"
              data-testid="undefinedfalse"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  Item 3
                </div>
              </div>
            </div>
          </span>
          <span
            className="emotion-23"
          >
            <div
              className="emotion-8"
              data-testid="undefinedfalse"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  Item 4
                </div>
              </div>
            </div>
          </span>
          <span
            className="emotion-27"
          >
            <div
              className="emotion-8"
              data-testid="undefinedfalse"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  Item 5
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
